WebCore/dom/Element.cpp
@@ -30,10 +30,12 @@
 #include "Document.h"
 #include "Editor.h"
 #include "ExceptionCode.h"
+#include "FocusController.h"
 #include "Frame.h"
 #include "FrameView.h"
 #include "HTMLNames.h"
 #include "NamedAttrMap.h"
+#include "Page.h"
 #include "RenderBlock.h"
 #include "SelectionController.h"
 #include "TextIterator.h"
@@ -871,9 +873,10 @@ void Element::focus()
     doc->updateLayout();
     
     if (!supportsFocus())
-        return;                
-        
-    doc->setFocusedNode(this);
+        return;
+    
+    if (Page* page = doc->page())
+        page->focusController()->setFocusedNode(this);
 
     if (!isFocusable()) {
         setNeedsFocusAppearanceUpdate(true);
